--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Welcome to my website</title>
 </head>
-<body>
+<body><h1>welcome to my website</h1>
+    <p>the<span> quick brown</span> fox jumps over the lazy dog</p>
     
 </body>
 </html>
